--- a/app/css/style.css
+++ b/app/css/style.css
@@ -5,12 +5,30 @@ body {
   height: 100%;
   user-select: none;
 }
-button i {
-  padding-left: 8px;
+#signup-container {
+  width: 460px;
+  margin: 100px auto;
 }
-.clear-fix {
-  clear: both;
+#signup-container .dropdown {
+  width: 280px;
 }
-#four04 {
-  padding: 20px;
+#signup-container .form-horizontal .controls {
+  margin-left: 100px;
+}
+#signup-container .form-horizontal .control-label {
+  width: 90px;
+}
+button {
+  width: 60px;
+}
+.well {
+  margin: 0;
+  padding-bottom: 5px;
+}
+.form-horizontal .form-actions {
+  margin: 0;
+  padding-left: 255px;
+}
+.modal-form-errors li {
+  color: #d8000c;
 }
