--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -9,10 +9,33 @@ html, body
 	height: 100%
 	user-select: none
     
-// shared rules //
-button i
-	padding-left 8px
-.clear-fix
-	clear both
-#four04
-	padding:20px
+// account form on signup & home page //
+
+#signup-container{
+	width 460px
+	margin 100px auto
+	.dropdown{
+		width 280px
+	}
+	.form-horizontal .controls{
+		margin-left 100px
+	}
+	.form-horizontal .control-label{
+		width 90px
+	}	
+}
+
+button
+	width 60px
+
+.well
+	margin 0
+	padding-bottom 5px
+
+.form-horizontal .form-actions{
+	margin 0	
+	padding-left 255px
+}
+
+.modal-form-errors li
+	color #D8000C
