org & user records inserting & print page

--- a/app/views/signup/signup-2.jade
+++ b/app/views/signup/signup-2.jade
@@ -4,32 +4,32 @@ form( method="post")#signup-page-2.form-horizontal.well
 	p.subheading Now please tell us a little something about you.
 	hr
 	fieldset
-		#admin-name.control-group
+		#user-name.control-group
 			label.control-label  Your Name
 			.controls
-				input#org-name-tf.input-xlarge(type='text', name='admin-name')
-		#admin-position.control-group
+				input#org-name-tf.input-xlarge(type='text', name='user-name')
+		#user-position.control-group
 			label.control-label Position
 			.controls
-				input.input-xlarge(type='text', name='admin-position')
-		#admin-phone.control-group
+				input.input-xlarge(type='text', name='user-position')
+		#user-phone.control-group
 			label.control-label Contact Phone
 			.controls
-				input.input-xlarge(type='text', name='admin-phone')
-		#admin-email.control-group
+				input.input-xlarge(type='text', name='user-phone')
+		#user-email.control-group
 			label.control-label Contact Email
 			.controls
-				input.input-xlarge(type='text', name='admin-email')
+				input.input-xlarge(type='text', name='user-email')
 		hr
 		p.subheading Please choose your username & password.
-		#admin-user.control-group
+		#user-login.control-group
 			label.control-label Username
 			.controls
-				input.input-xlarge(type='text', name='admin-user')
-		#admin-pass.control-group
+				input.input-xlarge(type='text', name='user-login')
+		#user-pass.control-group
 			label.control-label Password
 			.controls
-				input.input-xlarge(type='password', name='admin-pass')
+				input.input-xlarge(type='password', name='user-pass')
 		.form-actions
 			button(type='button')#signup-back.btn Back
 			button(type='submit')#signup-next.btn.btn-primary Next
