--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,9 +1,7 @@
 div(style='padding:20px') 
-	p Hello from title
-	#cnt
-#test(style='padding:10px 0 0 20px') 
-	button.btn.btn-primary click me
+	p Hello !
+	#connection-count
 
 script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
-script(src='/js/socket.js')
+script(src='/js/index.js')
