--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -48,6 +48,39 @@ html, body
 	right 8px
 	position absolute
 	
+#top .header
+	height 20px
+	padding 15px
+	background-color #EEE
+#top img
+	padding 0 10px 0 10px
+
+.opt
+	display none
+.opt .header
+	height 20px
+	padding 10px
+	background-color #EEE
+.opt .image
+	margin-left (65px / 2)
+.opt .slice
+	opacity 0
+.opt .slice, .ib
+	position absolute
+.opt .ir
+	margin-left 117px
+	
+#beds-o, #meals-o, #showers-o
+	top 400px
+	position absolute
+
+img
+	cursor pointer
+.name	
+	float left
+.inventory
+	text-align right
+	
 // signup & update form  //
 
 #signup-container{
@@ -86,5 +119,3 @@ html, body
 button i
 	padding-left 8px
 
-
-	
