inventory writing to db

--- a/app/views/account/home.jade
+++ b/app/views/account/home.jade
@@ -1,6 +1,6 @@
 
-- invs = JSON.stringify(inv)
-input(type='hidden', value=invs)#inv
+// store data from express in hidden field for js //
+input(type='hidden', value=JSON.stringify(org))#org
 
 div.navbar.navbar-fixed-top
 	div.navbar-inner
@@ -12,7 +12,7 @@ div.navbar.navbar-fixed-top
 				| Sign Out
 
 div(style='margin:60px 0 0 20px') 
-	p Welcome #{data.name} !
+	p Welcome #{org.name} !
 	button#skt-button.btn.btn-primary
 		i.icon-lock.icon-white
 		| Click Me!
@@ -22,24 +22,24 @@ div(style='margin:60px 0 0 20px')
 		#beds.span4
 			.header	
 				.name beds
-				.inventory #{inv.beds.total[0]} / #{inv.beds.total[1]}
+				.inventory #{org.inv.beds.total[0]} / #{org.inv.beds.total[1]}
 			img(src='/img/admin/bed.png')
 		#showers.span4
 			.header	
 				.name showers
-				.inventory #{inv.showers.total[0]} / #{inv.showers.total[1]}
+				.inventory #{org.inv.showers.total[0]} / #{org.inv.showers.total[1]}
 			img(src='/img/admin/shower.png')
 		#meals.span4
 			.header	
 				.name meals
-				.inventory #{inv.meals.total[0]} / #{inv.meals.total[1]}
+				.inventory #{org.inv.meals.total[0]} / #{org.inv.meals.total[1]}
 			img(src='/img/admin/meals.png')
 
 	#beds-o.row
 		#beds-male.span4.opt
 			.header
 				.name male beds
-				.inventory #{inv.beds.male[0]} / #{inv.beds.male[1]}
+				.inventory #{org.inv.beds.male[0]} / #{org.inv.beds.male[1]}
 			.image
 				img(src='/img/admin/bed-male.png').ib
 				img(src='/img/admin/bed-male-left.png').slice.il
@@ -47,7 +47,7 @@ div(style='margin:60px 0 0 20px')
 		#beds-female.span4.opt
 			.header
 				.name female beds
-				.inventory #{inv.beds.female[0]} / #{inv.beds.female[1]}
+				.inventory #{org.inv.beds.female[0]} / #{org.inv.beds.female[1]}
 			.image
 				img(src='/img/admin/bed-female.png').ib
 				img(src='/img/admin/bed-female-left.png').slice.il
@@ -55,7 +55,7 @@ div(style='margin:60px 0 0 20px')
 		#beds-family.span4.opt
 			.header
 				.name family beds
-				.inventory #{inv.beds.family[0]} / #{inv.beds.family[1]}
+				.inventory #{org.inv.beds.family[0]} / #{org.inv.beds.family[1]}
 			.image
 				img(src='/img/admin/bed-family.png').ib
 				img(src='/img/admin/bed-family-left.png').slice.il
@@ -65,7 +65,7 @@ div(style='margin:60px 0 0 20px')
 		#showers-male.offset2.span4.opt
 			.header
 				.name male showers
-				.inventory #{inv.showers.male[0]} / #{inv.showers.male[1]}
+				.inventory #{org.inv.showers.male[0]} / #{org.inv.showers.male[1]}
 			.image
 				img(src='/img/admin/shower-male.png').ib
 				img(src='/img/admin/shower-male-left.png').slice.il
@@ -73,7 +73,7 @@ div(style='margin:60px 0 0 20px')
 		#showers-female.span4.opt
 			.header
 				.name female showers
-				.inventory #{inv.showers.female[0]} / #{inv.showers.female[1]}
+				.inventory #{org.inv.showers.female[0]} / #{org.inv.showers.female[1]}
 			.image
 				img(src='/img/admin/shower-female.png').ib
 				img(src='/img/admin/shower-female-left.png').slice.il
@@ -83,7 +83,7 @@ div(style='margin:60px 0 0 20px')
 		#meals-bfast.span4.opt
 			.header
 				.name breakfast
-				.inventory  #{inv.meals.bfast[0]} / #{inv.meals.bfast[1]}
+				.inventory  #{org.inv.meals.bfast[0]} / #{org.inv.meals.bfast[1]}
 			.image
 				img(src='/img/admin/meals-breakfast.png').ib
 				img(src='/img/admin/meals-breakfast-left.png').slice.il
@@ -91,7 +91,7 @@ div(style='margin:60px 0 0 20px')
 		#meals-lunch.span4.opt
 			.header
 				.name lunch
-				.inventory #{inv.meals.lunch[0]} / #{inv.meals.lunch[1]}
+				.inventory #{org.inv.meals.lunch[0]} / #{org.inv.meals.lunch[1]}
 			.image
 				img(src='/img/admin/meals-lunch.png').ib
 				img(src='/img/admin/meals-lunch-left.png').slice.il
@@ -99,7 +99,7 @@ div(style='margin:60px 0 0 20px')
 		#meals-dinner.span4.opt
 			.header
 				.name dinner
-				.inventory #{inv.meals.dinner[0]} / #{inv.meals.dinner[1]}
+				.inventory #{org.inv.meals.dinner[0]} / #{org.inv.meals.dinner[1]}
 			.image
 				img(src='/img/admin/meals-dinner.png').ib
 				img(src='/img/admin/meals-dinner-left.png').slice.il
