--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -12,6 +12,17 @@ html, body
 	
 label
 	raiseText()
+	
+// public homepage //
+
+#orgs
+	padding 20px
+#orgs .orgName 
+	font-size 18px
+	font-weight bold
+	
+#orgs table
+	margin 0 0 5px 0
 
 // account login //
 
@@ -45,6 +56,9 @@ label
 }
 
 // control panel //
+
+#controls
+	margin-top 100px
 
 #btn-logout
 	width 100px
