--- a/app/views/account/home.jade
+++ b/app/views/account/home.jade
@@ -6,18 +6,12 @@ div.navbar.navbar-fixed-top
 	div.navbar-inner
 		div.container-fluid
 			ul#global-nav.nav.pull-left
-				a(href='#').brand Control Panel
+				a(href='#').brand
 			button#btn-logout.btn.btn-primary
 				i.icon-lock.icon-white
 				| Sign Out
 
-div(style='margin:60px 0 0 20px') 
-	p Welcome #{org.name} !
-	button#skt-button.btn.btn-primary
-		i.icon-lock.icon-white
-		| Click Me!
-
-.container
+#controls.container
 	#top.row
 		#beds.span4
 			.header	
