refactoring, adding session support

--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -18,8 +18,8 @@
             a(href='#')#forgot-password Forgot Your Password? 
             a(href='/signup')#create-account Create An Account
     
-include ../modals/alert
-include ../modals/lost-password
+include modals/alert
+include modals/lost-password
 
 script(src='/vendor/jquery.min.js')
 script(src='/vendor/jquery.form.js')
