--- a/app/views/home/control-panel.jade
+++ b/app/views/home/control-panel.jade
@@ -1,15 +1,5 @@
 
-// store data from express in hidden field for js //
-input(type='hidden', value=JSON.stringify(org))#org
-
-div.navbar.navbar-fixed-top
-	div.navbar-inner
-		div.container-fluid
-			ul#global-nav.nav.pull-left
-				a(href='#').brand
-			button#btn-logout.btn.btn-primary
-				i.icon-lock.icon-white
-				| Sign Out
+include home-header
 
 #controls.container
 	#top.row
@@ -102,4 +92,5 @@ div.navbar.navbar-fixed-top
 
 script(src='/vendor/jquery.min.js')
 script(src='/socket.io/socket.io.js')
-script(src='/js/home.js')
+script(src='/js/home/home-header.js')
+script(src='/js/home/control-panel.js')
