--- a/app/views/modals/email-password.jade
+++ b/app/views/modals/email-password.jade
@@ -1,12 +1,12 @@
 
-#get-credentials.modal-single-input.modal.hide.fade
+.modal-email.modal-single-input.modal.hide.fade
     div.modal-header
         button.close(data-dismiss='modal') x
         h3 Retrieve Password
     div.modal-body
-        form( method="post")#get-credentials-form.well.span5
+        form( method="post")#email-form.well.span5
             p Please enter the email address associated with your account
-            input(type="text", name="email", id='email-tf').span5.required
+            input(type="text", name="email", id='email').span5.required
             button(type="submit")#submit.btn.btn-primary Submit
             button(data-dismiss="modal")#cancel.btn Cancel
             div.alert.alert-error.hide
