--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -3,10 +3,10 @@
     form( method="post")#login-form.well.span4
         h1 Hello!
         p.subheading Please Login To Your Account
-        label Username 
-        input(type="text", name="user", id='user-tf').span4.required
+        label Email 
+        input(type="text", name="email", id='email').span4.required
         label Password
-        input(type="password", name="pass", id='pass-tf').span4.required
+        input(type="password", name="passw", id='passw').span4.required
         button(type="submit")#btn-login.btn.btn-primary
             i.icon-lock.icon-white
             | Sign in
@@ -19,9 +19,11 @@
             a(href='/signup')#create-account Create An Account
     
 include modals/alert
-include modals/lost-password
+include modals/email-password
 
 script(src='/vendor/jquery.min.js')
 script(src='/vendor/jquery.form.js')
 script(src='/vendor/bootstrap-modal.js')
 script(src='/vendor/bootstrap-transition.js')
+script(src='/js/login/login.js')
+script(src='/js/login/login-validator.js')
