--- a/app/views/modals/reset-password.jade
+++ b/app/views/modals/reset-password.jade
@@ -1,9 +1,9 @@
 
-#set-password.modal-single-input.modal.hide.fade
+.modal-reset.modal-single-input.modal.hide.fade
     div.modal-header
         h3 Reset Password
     div.modal-body
-        form( method="post")#set-password-form.well.span5
+        form( method="post")#reset-form.well.span5
             p Please enter your new password
             input(type="password", name="pass", id='pass-tf').span5.required
             button(type="submit")#submit.btn.btn-primary Submit
