inventory page layout - painful

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -50,6 +50,29 @@ label,
   float: left;
   margin-left: 10px;
 }
+#signup-container {
+  width: 460px;
+  margin: 100px auto;
+}
+#signup-container .dropdown {
+  width: 280px;
+}
+#signup-container .well {
+  padding-bottom: 5px;
+}
+#signup-container .form-horizontal .controls {
+  margin-left: 100px;
+}
+#signup-container .form-horizontal .control-label {
+  width: 90px;
+}
+#signup-container .form-horizontal .form-actions {
+  margin: 0;
+  padding-left: 255px;
+}
+#signup-container .two-line {
+  margin-top: -9px;
+}
 .modal-single-input {
   width: 452px;
   margin: -200px 0 0 -232px;
@@ -80,8 +103,11 @@ label,
 .modal-single-input .modal-footer {
   height: 20px;
 }
-#controls {
-  margin-top: 100px;
+#logged-in-user-name {
+  top: 11px;
+  right: 130px;
+  text-align: right;
+  position: absolute;
 }
 #btn-logout {
   width: 100px;
@@ -89,83 +115,124 @@ label,
   right: 8px;
   position: absolute;
 }
-#top .header {
+#controls {
+  margin-top: 100px;
+}
+#controls #top .header {
   height: 20px;
   padding: 15px;
   background-color: #eee;
 }
-#top img {
+#controls #top img {
   padding: 0 10px 0 10px;
 }
-.opt {
+#controls .opt {
   display: none;
 }
-.opt .header {
+#controls .opt .header {
   height: 20px;
   padding: 10px;
   background-color: #eee;
 }
-.opt .image {
+#controls .opt .image {
   margin-left: 32.5px;
 }
-.opt .slice {
+#controls .opt .slice {
   opacity: 0;
 }
-.opt .slice,
+#controls .opt .slice,
 .ib {
   position: absolute;
 }
-.opt .ir {
+#controls .opt .ir {
   margin-left: 117px;
 }
-#beds-o,
+#controls .name {
+  float: left;
+}
+#controls .inventory {
+  text-align: right;
+}
+#controls #beds-o,
 #meals-o,
 #showers-o {
   top: 400px;
   position: absolute;
 }
-img {
-  cursor: pointer;
+#inventory .heading {
+  color: #808080;
+  text-shadow: -1px 1px 0 #fff;
+  -moz-text-shadow: -1px 1px 0 #fff;
+  -webkit-text-shadow: -1px 1px 0 #fff;
+  font-size: 1.4em;
 }
-.name {
+#categories {
   float: left;
+  height: 100%;
+  width: 200px;
+  background: #eaeaea;
+  border-right: thin double #ccc;
 }
-.inventory {
-  text-align: right;
+#categories .heading {
+  padding: 20px 0 0 0;
+  text-align: center;
 }
-#signup-container {
-  width: 460px;
-  margin: 100px auto;
+#categories img {
+  float: left;
+  margin: 0 20px 10px 20px;
+  width: 160px;
 }
-#signup-container .dropdown {
-  width: 280px;
+#offerings {
+  height: 100%;
+  width: 100%;
+  background: #eee;
 }
-#signup-container .well {
-  padding-bottom: 5px;
+#offerings .wrap2 {
+  margin-left: 220px;
+  padding: 20px;
 }
-#signup-container .form-horizontal .controls {
-  margin-left: 100px;
+#offerings .heading {
+  margin-left: 20px;
 }
-#signup-container .form-horizontal .control-label {
-  width: 90px;
-}
-#signup-container .form-horizontal .form-actions {
-  margin: 0;
-  padding-left: 255px;
-}
-#signup-container .two-line {
-  margin-top: -9px;
+#offerings .content {
+  width: 100%;
+  height: 100%;
 }
 .modal-form-errors li {
   color: #d8000c;
+}
+img {
+  cursor: pointer;
+}
+button i {
+  padding-left: 8px;
+}
+.well button {
+  width: 60px;
 }
 .well,
 .form-horizontal {
   margin: 0;
 }
-.well button {
-  width: 60px;
+.header-push {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 40px;
 }
-button i {
-  padding-left: 8px;
+.page-container {
+  position: fixed;
+  background: #eee;
+  top: 40px;
+  bottom: 20px;
+  width: 100%;
+  overflow: auto;
+/* Makes the Content scrollable if its required */
+}
+.footer-push {
+  position: fixed;
+  height: 20px;
+  bottom: 0;
+  width: 100%;
+  background: #222;
 }
