--- a/app/views/modals/email-password.jade
+++ b/app/views/modals/email-password.jade
@@ -1,9 +1,9 @@
 
 .modal-email.modal-single-input.modal.hide.fade
-    div.modal-header
+    .modal-header
         button.close(data-dismiss='modal') x
         h3 Retrieve Password
-    div.modal-body
+    .modal-body
         form( method="post")#email-form.well.span5
             p Please enter the email address associated with your account
             input(type="text", name="email", id='email').span5.required
@@ -11,4 +11,4 @@
             button(data-dismiss="modal")#cancel.btn Cancel
             div.alert.alert-error.hide
             button(data-dismiss="alert").close
-    div.modal-footer
+    .modal-footer
