--- a/app/views/home/inventory.jade
+++ b/app/views/home/inventory.jade
@@ -14,10 +14,14 @@ include home-header
 				.heading Our Offerings
 				hr
 				.content
-					img(src='/img/inv/option-meals.png', title='meals', name='meals')
 
 .footer-push
 
+include ../modals/inv-editor
+
 script(src='/vendor/jquery.min.js')
+script(src='/vendor/bootstrap-modal.js')
+script(src='/vendor/bootstrap-transition.js')
+script(src='/js/utils/globals.js')
 script(src='/js/home/home-header.js')
 script(src='/js/home/inventory.js')
