db records finally updating from inventory editor

--- a/app/views/home/home-header.jade
+++ b/app/views/home/home-header.jade
@@ -21,3 +21,5 @@ div.navbar.navbar-fixed-top
 				i.icon-lock.icon-white
 				| Sign Out
 	#logged-in-user-name Welcome : #{user.name}
+
+script(src='/js/utils/globals.js')
